--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 		</ul>
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName">Music Name: Default</h2>			
-	<button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Create New</button>
+	<a class="btn btn-primary btn-xl text-uppercase" href="create.html" role="button">Create New</a>
 </header>
 <!--Footer-->
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Made by Opensource</p>
 </div>
-<script src="scripts.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
