--- a/create.html
+++ b/create.html
@@ -22,7 +22,7 @@
     <div class="mycontent-heading text-uppercase">New Music #1</div>
 	<br></br>		
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
-	<a class="btn btn-primary btn-xl text-uppercase" href="#" role="button">Submit</a>
+	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
 	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button">Delete</a>
 </header>
 <!--Footer-->
