change dropdown style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Default
 		<span class="caret"></span></button>
 		<ul class="dropdown-menu" id="musicList">
-			<li><a href="#" onclick="return false;">Default</a></li>
+			<li><a class="dropdown-item" href="#">Default</a></li>
+			<!--<li><a href="#" onclick="return false;">Default</a></li>-->
 			<!--<li><a href="#" onclick="return false;">Record#1</a></li>-->
 			<!--<li><a href="#" onclick="return false;">Record#2</a></li>-->
 		</ul>
