--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<!--<li><a href="#" onclick="return false;">Record#2</a></li>-->
 		</ul>
 	</div><br></br>
-	<h2 class="mycontent-heading text-uppercase" id="musicName">Music Name: Default</h2>			
+	<h2 class="mycontent-heading text-uppercase" id="musicName">Playing: Default</h2>			
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html" role="button">Create New</a>
 </header>
 <!--Footer-->
