--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Default
 		<span class="caret"></span></button>
 		<ul class="dropdown-menu" id="musicList">
-			<li><a class="dropdown-item" href="#">Default</a></li>
+
 			<!--<li><a href="#" onclick="return false;">Default</a></li>-->
 			<!--<li><a href="#" onclick="return false;">Record#1</a></li>-->
 			<!--<li><a href="#" onclick="return false;">Record#2</a></li>-->
 		</ul>
 	</div><br></br>
-	<h2 class="mycontent-heading text-uppercase" id="musicName">Playing: Default</h2>			
+	<h2 class="mycontent-heading text-uppercase" id="musicName">Default</h2>			
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html" role="button">Create New</a>
 </header>
 <!--Footer-->
