--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName">Default</h2>	
 	<div class="mycontent-subheading" id="musicNotes"></div>
-	<a class="btn btn-primary btn-xl text-uppercase" href="create.html" role="button">Create New</a>
+	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
+	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 </header>
 <!--Footer-->
 <div class="jumbotron text-center" style="margin-bottom:0">
