add piano without sound and javascript

--- a/create.html
+++ b/create.html
@@ -24,7 +24,52 @@
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
 	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button">Delete</a>
+
+  <!-- Piano -->
+  <div class = "piano">
+    <ul class="set">
+      <li class="white b"></li>
+      <li class="black as"></li>
+      <li class="white a"></li>
+      <li class="black gs"></li>
+      <li class="white g"></li>
+      <li class="black fs"></li>
+      <li class="white f"></li>
+      <li class="white e"></li>
+        <li class="black ds"></li>
+        <li class="white d"></li>
+        <li class="black cs"></li>
+        <li class="white c"></li>
+    
+      <li class="white b"></li>
+      <li class="black as"></li>
+      <li class="white a"></li>
+      <li class="black gs"></li>
+      <li class="white g"></li>
+      <li class="black fs"></li>
+      <li class="white f"></li>
+      <li class="white e"></li>
+        <li class="black ds"></li>
+        <li class="white d"></li>
+        <li class="black cs"></li>
+        <li class="white c"></li>
+
+      <li class="white b"></li>
+      <li class="black as"></li>
+      <li class="white a"></li>
+      <li class="black gs"></li>
+      <li class="white g"></li>
+      <li class="black fs"></li>
+      <li class="white f"></li>
+      <li class="white e"></li>
+        <li class="black ds"></li>
+        <li class="white d"></li>
+        <li class="black cs"></li>
+        <li class="white c"></li>
+    </ul>
+  </div>
 </header>
+
 <!--Footer-->
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Made by Opensource</p>
