index.js no longer requires jQuery

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Default
+		<button class="btn btn-primary dropdown-toggle" id="dropLabel" type="button" data-toggle="dropdown">Default
 		<span class="caret"></span></button>
 		<ul class="dropdown-menu" id="musicList">
 			<!--<li><a href="#" onclick="return false;">Default</a></li>-->
