--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -27,13 +27,12 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-		<button class="btn btn-primary dropdown-toggle" id="dropLabel" type="button" data-toggle="dropdown">Default
-		<span class="caret"></span></button>
-		<ul class="dropdown-menu" id="musicList">
-			<!--<li><a href="#" onclick="return false;">Default</a></li>-->
-			<!--<li><a href="#" onclick="return false;">Record#1</a></li>-->
-			<!--<li><a href="#" onclick="return false;">Record#2</a></li>-->
-		</ul>
+	  <button onclick="myFunction()" class="dropbtn dropbtn-round" id="dropLabel">Default</button>
+	  <div id="myDropdown" class="dropdown-content">
+		<!--<a href="#">Link 1</a>
+		<a href="#">Link 2</a>
+		<a href="#">Link 3</a>-->
+	  </div>
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName">Default</h2>	
 	<div class="mycontent-subheading" id="musicNotes"></div>
