add custom background and footer

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 </header>
 <!--Footer-->
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Made by Opensource</p>
-</div>
+<footer class="content">
+	<div class="mycontent-subheading">Made by Opensource</div>
+</footer>
 <script src="index.js"></script>
 <audio id="a3" src="notes/a3.wav"></audio>
 <audio id="a4" src="notes/a4.wav"></audio>
