--- a/create.html
+++ b/create.html
@@ -117,9 +117,9 @@
 }</script>
 
 <!--Footer-->
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Made by Opensource</p>
-</div>
+<footer class="content">
+	<div class="mycontent-subheading">Made by Opensource</div>
+</footer>
 <script src="create.js"></script>
 </body>
 </html>
