update index page"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-	  <button onclick="myFunction()" class="dropbtn dropbtn-round" id="dropLabel">Default</button>
+	  <button onclick="myFunction()" class="dropbtn" id="dropLabel">Default</button>
 	  <div id="myDropdown" class="dropdown-content">
 		<!--<a href="#">Link 1</a>
 		<a href="#">Link 2</a>
@@ -35,7 +35,7 @@
 	  </div>
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName">Default</h2>	
-	<div class="mycontent-subheading" id="musicNotes"></div>
+	<div class="mycontent-subheading-bold" id="musicNotes"></div>
 	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 </header>
