can now change music while playing notes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-	  <button onclick="myFunction()" class="dropbtn" id="dropLabel">Default</button>
+	  <button onclick="OpenDropdownContent()" class="dropbtn" id="dropLabel">Default</button>
 	  <div id="myDropdown" class="dropdown-content">
 		<!--<a href="#">Link 1</a>
 		<a href="#">Link 2</a>
