add scrollable dropdown & bg anim & more samples

--- a/create.html
+++ b/create.html
@@ -16,6 +16,8 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
+<!--Background Layer-->
+<header class="bg animated"></header>
 <!--Content-->
 <header class="mycontent">
 	<div class="mycontent-subheading">Music Name</div>
