--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
+<!--Background Layer-->
+<header class="bg animated"></header>
 <!--Content-->
 <header class="mycontent">
 	<div class="mycontent-subheading">Project Name</div>
