--- a/create.html
+++ b/create.html
@@ -21,7 +21,10 @@
 <!--Content-->
 <header class="mycontent">
 	<div class="mycontent-subheading">Music Name</div>
-    <div class="mycontent-heading text-uppercase">New Music #1</div>
+    <!-- input name -->
+    <form action="" id="add_name">
+        <input type="text" class="mycontent-heading text-uppercase" name="music_name" id="music_name" placeholder="New Music #1"/>
+    </form>
 	<br></br>		
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
