mapping delete with button

--- a/create.html
+++ b/create.html
@@ -28,7 +28,7 @@
 	<br></br>		
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
-	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button">Delete</a>
+	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button" id = "deleteButton">Delete</a>
 
   <!-- Piano -->
   <!-- Keys -->
