Add display record

--- a/create.html
+++ b/create.html
@@ -25,10 +25,10 @@
     <form action="" id="add_name">
         <input type="text" class="mycontent-heading text-uppercase" name="music_name" id="music_name" placeholder="New Music #1"/>
     </form>
-	<br></br>		
+	<div class="mycontent-subheading-bold" id="recordNotes"></div>
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
-	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button" id = "deleteButton">Delete</a>
+	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button" onclick="return false" id = "deleteButton">Delete</a>
 
   <!-- Piano -->
   <!-- Keys -->
