Add a feature to delete selected music

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<div class="mycontent-subheading-bold" id="musicNotes"></div>
 	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
+	<a class="btn btn-primary btn-xl text-uppercase" id="delete">Delete</a>
 </header>
 <!--Footer-->
 <footer class="content">
