--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 <body>
 <!--Background Layer-->
-<header class="bg animated"></header>
+<header class="bg-back animated"></header>
+<header class="bg-front a-animated"></header>
+<header class="bg-front b-animated"></header>
 <!--Content-->
 <header class="mycontent">
 	<div class="mycontent-subheading">Project Name</div>
