--- a/create.html
+++ b/create.html
@@ -26,7 +26,7 @@
 	<div class="mycontent-subheading">Music Name</div>
     <!-- input name -->
     <form action="" id="add_name">
-        <input type="text" class="mycontent-heading text-uppercase" name="music_name" id="music_name" placeholder="New Music #1"/>
+        <input type="text" class="mycontent-heading text-uppercase" name="music_name" id="music_name" placeholder="Your Music Name"/>
     </form>
 	</br><br>
 	<div class="mycontent-subheading-bold" id="recordNotes"></div>
