--- a/create.html
+++ b/create.html
@@ -39,42 +39,42 @@
   <!-- Keys -->
   <div class = "piano">
     <ul class="set">
-      <li class="white b" id ='f3'></li>
-      <li class="black as" id='f-3'></li>
-      <li class="white a" id='g3'></li>
-      <li class="black gs" id='g-3'></li>
-      <li class="white g" id='a3'></li>
-      <li class="black fs" id='a-3'></li>
-      <li class="white f" id='b3'></li>
-      <li class="white e" id='c4'></li>
-        <li class="black ds" id='c-4'></li>
-        <li class="white d" id='d4'></li>
-        <li class="black cs" id='d-4'></li>
-        <li class="white c" id='e4'></li>
-      <li class="white b" id='f4'></li>
-      <li class="black as" id='f-4'></li>
-      <li class="white a" id='g4'></li>
-      <li class="black gs" id='g-4'></li>
-      <li class="white g" id='a4'></li>
-      <li class="black fs" id='a-4'></li>
-      <li class="white f" id='b4'></li>
-      <li class="white e" id='c5'></li>
-        <li class="black ds" id='c-5'></li>
-        <li class="white d" id='d5'></li>
-        <li class="black cs" id='d-5'></li>
-        <li class="white c" id='e5'></li>
-      <li class="white b" id='f5'></li>
-      <li class="black as" id='f-5'></li>
-      <li class="white a" id='g5'></li>
-      <li class="black gs" id='g-5'></li>
-      <li class="white g" id='a5'></li>
-      <li class="black fs" id='a-5'></li>
-      <li class="white f" id='b5'></li>
-      <li class="white e" id='c6'></li>
-        <li class="black ds" id='c-6'></li>
-        <li class="white d" id='d6'></li>
-        <li class="black cs" id='d-6'></li>
-        <li class="white c" id='e6'></li>
+      <li class="white b" id ='f3'>F3</li>
+      <li class="black as" id='f-3'>F#3</li>
+      <li class="white a" id='g3'>G3</li>
+      <li class="black gs" id='g-3'>G#3</li>
+      <li class="white g" id='a3'>A3</li>
+      <li class="black fs" id='a-3'>A#3</li>
+      <li class="white f" id='b3'>B3</li>
+      <li class="white e" id='c4'>C4</li>
+        <li class="black ds" id='c-4'>C#4</li>
+        <li class="white d" id='d4'>D4</li>
+        <li class="black cs" id='d-4'>D#4</li>
+        <li class="white c" id='e4'>E4</li>
+      <li class="white b" id='f4'>F4</li>
+      <li class="black as" id='f-4'>F#4</li>
+      <li class="white a" id='g4'>G4</li>
+      <li class="black gs" id='g-4'>G#4</li>
+      <li class="white g" id='a4'>A4</li>
+      <li class="black fs" id='a-4'>A#4</li>
+      <li class="white f" id='b4'>B4</li>
+      <li class="white e" id='c5'>C5</li>
+        <li class="black ds" id='c-5'>C#5</li>
+        <li class="white d" id='d5'>D5</li>
+        <li class="black cs" id='d-5'>D#5</li>
+        <li class="white c" id='e5'>E5</li>
+      <li class="white b" id='f5'>F5</li>
+      <li class="black as" id='f-5'>F#5</li>
+      <li class="white a" id='g5'>G5</li>
+      <li class="black gs" id='g-5'>G#5</li>
+      <li class="white g" id='a5'>A5</li>
+      <li class="black fs" id='a-5'>A#5</li>
+      <li class="white f" id='b5'>B5</li>
+      <li class="white e" id='c6'>C6</li>
+        <li class="black ds" id='c-6'>C#6</li>
+        <li class="white d" id='d6'>D6</li>
+        <li class="black cs" id='d-6'>D#6</li>
+        <li class="white c" id='e6'>E6</li>
     </ul>
   </div>
 </header>
