add label to key

--- a/create.html
+++ b/create.html
@@ -39,42 +39,42 @@
   <!-- Keys -->
   <div class = "piano">
     <ul class="set">
-      <li class="white b" id ='f3' style = "color: black;">F3</li>
-      <li class="black as" id='f-3'>F#3</li>
-      <li class="white a" id='g3' style = "color: black;">G3</li>
-      <li class="black gs" id='g-3'>G#3</li>
-      <li class="white g" id='a3' style = "color: black;">A3</li>
-      <li class="black fs" id='a-3'>A#3</li>
-      <li class="white f" id='b3' style = "color: black;">B3</li>
-      <li class="white e" id='c4' style = "color: black;">C4</li>
-        <li class="black ds" id='c-4'>C#4</li>
-        <li class="white d" id='d4'style = "color: black;">D4</li>
-        <li class="black cs" id='d-4'>D#4</li>
-        <li class="white c" id='e4'style = "color: black;">E4</li>
-      <li class="white b" id='f4'style = "color: black;">F4</li>
-      <li class="black as" id='f-4'>F#4</li>
-      <li class="white a" id='g4'style = "color: black;">G4</li>
-      <li class="black gs" id='g-4'>G#4</li>
-      <li class="white g" id='a4'style = "color: black;">A4</li>
-      <li class="black fs" id='a-4'>A#4</li>
-      <li class="white f" id='b4'style = "color: black;">B4</li>
-      <li class="white e" id='c5'style = "color: black;">C5</li>
-        <li class="black ds" id='c-5'>C#5</li>
-        <li class="white d" id='d5'style = "color: black;">D5</li>
-        <li class="black cs" id='d-5'>D#5</li>
-        <li class="white c" id='e5'style = "color: black;">E5</li>
-      <li class="white b" id='f5'style = "color: black;">F5</li>
-      <li class="black as" id='f-5'>F#5</li>
-      <li class="white a" id='g5'style = "color: black;">G5</li>
-      <li class="black gs" id='g-5'>G#5</li>
-      <li class="white g" id='a5'style = "color: black;">A5</li>
-      <li class="black fs" id='a-5'>A#5</li>
-      <li class="white f" id='b5'style = "color: black;">B5</li>
-      <li class="white e" id='c6'style = "color: black;">C6</li>
-        <li class="black ds" id='c-6'>C#6</li>
-        <li class="white d" id='d6'style = "color: black;">D6</li>
-        <li class="black cs" id='d-6'>D#6</li>
-        <li class="white c" id='e6'style = "color: black;">E6</li>
+      <li class="white b" id ='f3' style = "color: black;">Q <br></br>F3</li>
+      <li class="black as" id='f-3'>2 <br></br>F#3</li>
+      <li class="white a" id='g3' style = "color: black;">W <br></br>G3</li>
+      <li class="black gs" id='g-3'>3 <br></br>G#3</li>
+      <li class="white g" id='a3' style = "color: black;">E <br></br>A3</li>
+      <li class="black fs" id='a-3'>4 <br></br>A#3</li>
+      <li class="white f" id='b3' style = "color: black;">R <br></br>B3</li>
+      <li class="white e" id='c4' style = "color: black;">T <br></br>C4</li>
+        <li class="black ds" id='c-4'>6 <br></br>C#4</li>
+        <li class="white d" id='d4'style = "color: black;">Y <br></br>D4</li>
+        <li class="black cs" id='d-4'>7 <br></br>D#4</li>
+        <li class="white c" id='e4'style = "color: black;">U <br></br>E4</li>
+      <li class="white b" id='f4'style = "color: black;">I <br></br>F4</li>
+      <li class="black as" id='f-4'>9 <br></br>F#4</li>
+      <li class="white a" id='g4'style = "color: black;">O <br></br>G4</li>
+      <li class="black gs" id='g-4'>0 <br></br>G#4</li>
+      <li class="white g" id='a4'style = "color: black;">P <br></br>A4</li>
+      <li class="black fs" id='a-4'>- <br></br>A#4</li>
+      <li class="white f" id='b4'style = "color: black;">[ <br></br>B4</li>
+      <li class="white e" id='c5'style = "color: black;">Z <br></br>C5</li>
+        <li class="black ds" id='c-5'>S <br></br>C#5</li>
+        <li class="white d" id='d5'style = "color: black;">X <br></br>D5</li>
+        <li class="black cs" id='d-5'>D <br></br>D#5</li>
+        <li class="white c" id='e5'style = "color: black;">C <br></br>E5</li>
+      <li class="white b" id='f5'style = "color: black;">V <br></br>F5</li>
+      <li class="black as" id='f-5'>G <br></br>F#5</li>
+      <li class="white a" id='g5'style = "color: black;">B <br></br>G5</li>
+      <li class="black gs" id='g-5'>H <br></br>G#5</li>
+      <li class="white g" id='a5'style = "color: black;">N <br></br>A5</li>
+      <li class="black fs" id='a-5'>J <br></br>A#5</li>
+      <li class="white f" id='b5'style = "color: black;">M <br></br>B5</li>
+      <li class="white e" id='c6'style = "color: black;">, <br></br>C6</li>
+        <li class="black ds" id='c-6'>L <br></br>C#6</li>
+        <li class="white d" id='d6'style = "color: black;">. <br></br>D6</li>
+        <li class="black cs" id='d-6'>; <br></br>D#6</li>
+        <li class="white c" id='e6'style = "color: black;">/ <br></br>E6</li>
     </ul>
   </div>
 </header>
