--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-	  <button onclick="OpenDropdownContent()" class="dropbtn" id="dropLabel">Default</button>
+	  <button onclick="OpenDropdownContent()" class="dropbtn" id="dropLabel">Select</button>
 	  <div id="myDropdown" class="dropdown-content">
 		<!--<a href="#">Link 1</a>
 		<a href="#">Link 2</a>
 		<a href="#">Link 3</a>-->
 	  </div>
 	</div><br></br>
-	<h2 class="mycontent-heading text-uppercase" id="musicName">Default</h2>	
+	<h2 class="mycontent-heading text-uppercase" id="musicName"></h2>	
 	<div class="mycontent-subheading-bold" id="musicNotes"></div>
 	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
