add random button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="delete">Delete</a>
+	<a class="btn btn-primary btn-xl text-uppercase" id="random">Random</a>
 </header>
 <!--Footer-->
 <footer class="content">
