add mute botton

--- a/create.html
+++ b/create.html
@@ -34,6 +34,7 @@
   <!-- number of note -->
   <div class="mycontent-subheading" id="number of note">number of note(s): 0</div>
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
+  <a class="btn btn-primary btn-xl text-uppercase" id="mute" role="button">MUTE</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
 	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button" onclick="return false" id = "deleteButton">Delete</a>
 	<br></br><br></br>
