--- a/create.html
+++ b/create.html
@@ -32,7 +32,7 @@
 	<div class="mycontent-subheading-bold" id="recordNotes"></div>
 	</br><br>
   <!-- number of note -->
-  <div class="mycontent-subheading" id="number of note">number of note(s): 0</div>
+  <div class="mycontent-subheading" id="number of note">number of note(s): 0/40</div>
 	<a class="btn btn-primary btn-xl text-uppercase" href="index.html" role="button">Back</a>
   <a class="btn btn-primary btn-xl text-uppercase" id="mute" role="button">MUTE</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
