add delay for delete

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="mycontent-subheading-bold" id="musicNotes"></div>
 	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
-	<a class="btn btn-primary btn-xl text-uppercase" id="delete">Delete</a>
+	<a class="btn btn-primary btn-xl text-uppercase" id="delete" onclick="setTimeout(delfunc,2000)">Delete</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="random">Random</a>
 </header>
 <!--Footer-->
@@ -52,3 +52,4 @@
 <script src="index.js"></script>
 </body>
 </html>
+ 
