--- a/create.html
+++ b/create.html
@@ -37,7 +37,9 @@
   <a class="btn btn-primary btn-xl text-uppercase" id="mute" role="button">MUTE</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="submitButton" href="#" role="button">Submit</a>
 	<a class="btn btn-primary pull-right btn-xl text-uppercase" href="#" role="button" onclick="return false" id = "deleteButton">Delete</a>
-	<br></br><br></br>
+  <br></br>
+  <!-- rest key -->
+  <a class="btn rest" id="rest" role="button" onclick="restbutton()">Rest(space bar)</a>
   <!-- Piano -->
   <!-- Keys -->
   <div class = "piano">
@@ -80,6 +82,7 @@
         <li class="white c" id='e6'style = "color: black;">/ <br></br>E6</li>
     </ul>
   </div>
+
 </header>
 <!--Footer-->
 <footer class="content">
