prevent scrolling page while pressing spacebar

--- a/create.html
+++ b/create.html
@@ -89,6 +89,7 @@
 <footer class="content">
 	<div class="mycontent-subheading">Made by Opensource</div>
 </footer>
+<script src="common.js"></script>
 <script src="create.js"></script>
 </body>
 </html>
