--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <footer class="content">
 	<div class="mycontent-subheading">Made by Opensource</div>
 </footer>
+<script src="common.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
