add preview in create page / edit play&delete button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</h1>
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
-	  <button onclick="OpenDropdownContent()" class="dropbtn" id="dropLabel">Select</button>
+	  <button onclick="OpenDropdownContent()" class="dropbtn red" id="dropLabel">Select</button>
 	  <div id="myDropdown" class="dropdown-content">
 		<!--<a href="#">Link 1</a>
 		<a href="#">Link 2</a>
@@ -41,10 +41,10 @@
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName"></h2>	
 	<div class="mycontent-subheading-bold" id="musicNotes"></div>
-	<a class="btn btn-primary btn-xl text-uppercase" id="preview">Preview</a>
-	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
-	<a class="btn btn-primary btn-xl text-uppercase" id="delete" onclick="setTimeout(delfunc,2000)">Delete</a>
+	<a class="btn btn-success btn-xl text-uppercase" id="play">Play</a>
 	<a class="btn btn-primary btn-xl text-uppercase" id="random">Random</a>
+	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
+	<a class="btn btn-danger btn-xl text-uppercase" id="delete" onclick="setTimeout(delfunc,2000)">Delete</a>
 </header>
 <!--Footer-->
 <footer class="content">
