fetch and display hand washing count

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
 	<a class="btn btn-primary btn-xl text-uppercase" id="random">Random</a>
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 	<a class="btn btn-danger btn-xl text-uppercase" id="delete" data-toggle="modal" data-target="#modalCenter">Delete</a>
+	<br></br>
+	<div class="mycontent-subheading" id="countReport">Total Hand Washed:</div>
 </header>
 <!--Footer-->
 <footer class="content">
+
 	<div class="mycontent-subheading">Made by Opensource</div>
 </footer>
 <script src="common.js"></script>
