--- a/create.html
+++ b/create.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.ico">
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
@@ -41,9 +39,8 @@
 	<a class="btn btn-danger pull-right btn-xl text-uppercase" href="#" role="button" onclick="return false" id = "deleteButton">Delete</a>
   <br></br>
   <!-- rest key -->
-  <a class="btn rest" id="rest" role="button" onclick="restbutton()">Rest(space bar)</a>
-  <!-- Piano -->
-  <!-- Keys -->
+  <a class="btn rest" id="rest" role="button" onclick="restbutton()">Rest / Space Bar</a>
+  <!-- Piano --> <!-- Keys -->
   <div class = "piano">
     <ul class="set">
       <li class="white b" id ='f3' style = "color: black;">Q <br></br>F3</li>
@@ -84,7 +81,6 @@
         <li class="white c" id='e6'style = "color: black;">/ <br></br>E6</li>
     </ul>
   </div>
-
 </header>
 <!--Footer-->
 <footer class="content">
