--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.ico">
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
@@ -53,11 +51,7 @@
 	<div class="mycontent-subheading">Pick a Music</div>
 	<div class="dropdown">
 	  <button onclick="OpenDropdownContent()" class="dropbtn red" id="dropLabel">Select</button>
-	  <div id="myDropdown" class="dropdown-content">
-		<!--<a href="#">Link 1</a>
-		<a href="#">Link 2</a>
-		<a href="#">Link 3</a>-->
-	  </div>
+	  <div id="myDropdown" class="dropdown-content"></div>
 	</div><br></br>
 	<h2 class="mycontent-heading text-uppercase" id="musicName"></h2>	
 	<div class="mycontent-subheading-bold" id="musicNotes"></div>
@@ -77,4 +71,3 @@
 <script src="js/index.js"></script>
 </body>
 </html>
- 
