--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<a class="btn btn-primary btn-xl text-uppercase" href="create.html">Create New</a>
 	<a class="btn btn-danger btn-xl text-uppercase" id="delete" data-toggle="modal" data-target="#modalCenter">Delete</a>
 	<br></br>
-	<div class="mycontent-subheading" id="countReport">Total Hand Washed:</div>
+	<!-- <div class="mycontent-subheading" id="countReport">Total Hand Washed:</div> -->
 </header>
 <!--Footer-->
 <footer class="content">
